<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nyc.c4q.leighdouglas.finalexam.LoginActivity">

    <EditText
        android:id="@+id/username_edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_username_edit" />

    <EditText
        android:id="@+id/password_edit_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_edit_txt"
        android:hint="@string/login_password_edit" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_edit_txt"
        android:layout_centerHorizontal="true"
        android:text="@string/login_submit_button" />

</RelativeLayout>
