<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/profile_image_width"
        android:layout_height="@dimen/profile_image_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/profile_image_bottomMargin" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_centerHorizontal="true">

        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/button1"
                android:layout_width="@dimen/profile_bttn_height"
                android:layout_height="@dimen/profile_bttn_height"
                android:layout_margin="@dimen/profile_buttons_margin"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button1"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/profile_buttons_margin"
                android:gravity="center"
                android:text="@string/profile_bttn1" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/button2"
                android:layout_width="@dimen/profile_bttn_height"
                android:layout_height="@dimen/profile_bttn_height"
                android:layout_margin="@dimen/profile_buttons_margin"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button2"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/profile_buttons_margin"
                android:gravity="center"
                android:text="@string/profile_bttn2" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/button3"
                android:layout_width="@dimen/profile_bttn_height"
                android:layout_height="@dimen/profile_bttn_height"
                android:layout_margin="@dimen/profile_buttons_margin"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button3"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/profile_buttons_margin"
                android:gravity="center"
                android:text="@string/profile_bttn3" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/button4"

                android:layout_width="@dimen/profile_bttn_height"
                android:layout_height="@dimen/profile_bttn_height"
                android:layout_margin="@dimen/profile_buttons_margin"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_below="@id/button4"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/profile_buttons_margin"
                android:gravity="center"
                android:text="@string/profile_bttn_logout" />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>